--- a/app/src/main/res/layout/fragment_create_profile01.xml
+++ b/app/src/main/res/layout/fragment_create_profile01.xml
@@ -19,7 +19,7 @@
         android:fontFamily="@font/bebasneue_regular"
 
         android:gravity="center"
-        android:text="Contraseña"
+        android:text="Crear perfil"
         android:textSize="50sp"
 
         app:layout_constraintEnd_toEndOf="parent"
