--- a/app/src/main/res/layout/fragment_create_profile01.xml
+++ b/app/src/main/res/layout/fragment_create_profile01.xml
@@ -67,7 +67,7 @@
         app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
         >
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/til_contraseñaEditText"
+            android:id="@+id/til_nombreEditText"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -116,7 +116,7 @@
         app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
         >
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/til_contraseña2EditText"
+            android:id="@+id/til_apellidosEditText"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -149,7 +149,7 @@
         android:id="@+id/btngrpSex"
 
         app:singleSelection="true"
-
+        app:checkedButton="@id/btnOtro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -172,7 +172,7 @@
             android:id="@+id/btnOtro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Otro"
+            android:text="Omitir"
             style="?attr/materialButtonOutlinedStyle"/>
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
