--- a/app/src/main/res/layout/fragment_registro04.xml
+++ b/app/src/main/res/layout/fragment_registro04.xml
@@ -68,7 +68,7 @@
         app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
         >
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/til_contraseñaEditText"
+            android:id="@+id/til_ContraseAEditText"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -118,7 +118,7 @@
         app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
         >
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/til_contraseña2EditText"
+            android:id="@+id/til_ContraseA2EditText"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
