--- a/app/src/main/res/layout/activity_guardar_foto.xml
+++ b/app/src/main/res/layout/activity_guardar_foto.xml
@@ -93,8 +93,10 @@
 
     <ImageView
         android:id="@+id/iv_foto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+
+        android:scaleType="centerCrop"
         android:src="@drawable/download"
         app:layout_constraintBottom_toTopOf="@+id/btn_foto"
         app:layout_constraintEnd_toEndOf="parent"
